<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tvDeparture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/deprtureStation"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/etDeparture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/setDepartureStation"
        android:onClick="setDeparture"/>

    <TextView
        android:id="@+id/tvDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/destinationStation"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/etDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/destinationStationSet"
        android:onClick="setDestination"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/departureDate"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/departureDateSet"
        android:inputType="date"
        android:onClick="setDate"/>


</LinearLayout>
